[package]
name = "plasmodesmata"
version = "0.1.2"
authors = ["iovxw <iovxw@outlook.com>"]

[dependencies]
bytes = "0.4"
log = "0.3"
rustls = "0.11"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-rustls = "0.4"
webpki-roots = "0.13"
structopt = "0.1"
structopt-derive = "0.1"
http = "0.1"
futures-await = "0.1"
h2 = { git = "https://github.com/carllerche/h2", features = ["unstable"] }