[package]
name = "plasmodesmata"
version = "0.1.3"
authors = ["iovxw <iovxw@outlook.com>"]

[dependencies]
bytes = "0.4"
log = "0.4"
env_logger = "0.4"
rustls = "0.12"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-rustls = "0.5"
webpki = "0.18.0-alpha"
webpki-roots = "0.14"
structopt = "0.1"
structopt-derive = "0.1"
http = "0.1"
futures-await = "0.1"
h2 = { git = "https://github.com/carllerche/h2", features = ["unstable"] }
